--- a/monstyle.css
+++ b/monstyle.css
@@ -12,12 +12,12 @@ h1 {
     font-size: 18px;
 }
 
-.légende1 {
+.legende1 {
 color:darkorange;
 font-size: 16px;
 
 }
-.légende2 {
+.legende2 {
 color:darkseagreen;
 font-size: 16px;
 }
